style.css
/* GENERAL */

body {
  background-color: grey;
  font-family: 'Chivo Mono', monospace;
  font-weight: 200;
}

.main-body {
  margin-left: 160px;
  max-width: 70em;
  padding-left: 2.5em;
  padding-top: 1em;
  padding-right: 1em;
}

/* NAV */

nav {
  z-index: 98;
  background-color: black;
  color: white;
  height: 100%;
  width: 160px;
  position: fixed;
  top: 0;
  left: 0;
}

#menu-button {
display: none;
}

nav h1 a {
  text-decoration: none;
  text-align: center;
  cursor: default;
}

nav h1 a:hover {
  background-color: saddlebrown;
}

nav h1 a:active {
  background-color: chocolate;
}

nav h1 a:visited {
  color: white;
}

nav h1 {
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  width: 5em;
  margin: 1em auto 0 auto;
  text-wrap: wrap;
}

nav ul {
  list-style-type: none;
  line-height: 25px;
}

nav ul li a {
  padding-left: 0.5em;
  text-decoration: none;
}

nav ul li.active {
  background-color: saddlebrown;
  font-weight: 700;
}

nav ul li:hover {
  background-color: chocolate;
}

nav ul li.active:hover {
  background-color:saddlebrown;
}

nav ul li:active {
  background-color: peru;
}

nav ul li a:visited {
  color: white;
}

/* ABOUT ME */

#aboutme {
  display: flex;
  flex-wrap: wrap;
}

.about-flex {
  width: 50%;
  min-width: 30em;
}

.slide {
  width: 100%;
  max-width: 500px;
  height: 100%;
  display: none;
  animation: fadeIn ease 0.7s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.slide p {
  font-style: italic;
  margin-top: 5px;
  margin-bottom: 2em;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.slide img {
  margin-top: 5px;
  width: 100%;
}

.slide:first-child {
  display: block;
}

.slide-button {
  cursor: pointer;
  color: white;
  font-weight: 700;
  background-color: black;
  padding: 5px;
}  

/* MUSIC */

#music {
  display: flex;
  flex-wrap: wrap;
}

.music-item {
  padding-right: 2em;
  width: 20em;
  margin-bottom: 1em;
}

.music-item h2 {
  margin: 0;
}

.music-item h3 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-weight: 400;
}

.music-item img {
  width: 100%;
}

.music-item ul {
  padding: 0;
  list-style-type: none;
}

/* GAME */

div#ui {
  margin: 0;
  width: 500px;
  text-align: left;
}

div#ui ul {
  padding-left: 1em;
}
 
canvas {
  outline: 1px solid black;
  background-color: dimgrey;
}

#mobile-warning {
  display: none;
}

/* MOBILE */

@media only screen and (max-width: 600px) {
  nav {
    width: 0;
    position: fixed;
    overflow-x: hidden;
    transition: 0.5s;
  }

  nav ul {
    padding: 0;
  }

  nav h1 {
    font-size: 25px;
    width: auto;
    text-align: center;
  }

  nav li {
    padding: 10px;
    text-align: center;
  }

  nav a {
    font-size: 20px;
  }

  .main-body {
    margin-left: 0px;
    padding: 1em;
  }

  #menu-button {
    display: block;
    cursor: pointer;
    color: white;
    font-weight: 700;
    background-color: black;
    padding: 5px;
    position: fixed;
    float: right;
    top: 5px;
    right: 5px;
    transition: 0.5s;
  }

  #close-menu-button {
    z-index: 99;
    display: none;
    cursor: pointer;
    color: black;
    font-weight: 700;
    background-color: white;
    padding: 5px;
    position: fixed;
    float: right;
    top: 5px;
    right: 5px;
    transition: 0.5s;
  }

  .music-item {
    width: 100%;
    padding: 0;
    padding: 0;
  }

  canvas {
    display: none;
  }

  div#ui ul {
    display: none;
  }

  button {
    display: none;
  }

  #mobile-warning {
    display: block;
  }

  .about-flex {
    width: 100%;
    min-width: 10em;
  }
}

